; ModuleID = '/home/carl/AnghaBench/esp-idf/components/freertos/test/extr_test_task_priorities.c_counter_task.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/freertos/test/extr_test_task_priorities.c_counter_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @counter_task to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @counter_task(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to i32*
  store i32* %5, i32** %3, align 8
  br label %6

6:                                                ; preds = %1, %6
  %7 = load i32*, i32** %3, align 8
  %8 = load volatile i32, i32* %7, align 4
  %9 = add nsw i32 %8, 1
  store volatile i32 %9, i32* %7, align 4
  br label %6
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
